--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
    				<img src="https://yt3.ggpht.com/-TJy-Hi4u7wc/AAAAAAAAAAI/AAAAAAAAAAA/Tu-nZ0OXbVE/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Profile Picture">
 
-   				<p class="lead">Nama saya Agung Arisandi, anak pertama dari 2 bersaudara, saya tinggal dan lahir di Bandung, tapi sekarang saya bekerja di Jakarta. Pekerjaan saya adalah menata baris demi baris code untuk mencapai tujuan yang saya inginkan. Salah satu kesulitan dalam hidup saya adalah menolak jika ada yang mengajak saya bermain bola :).</p>
+   				<p class="lead">Nama saya Agung Arisandi, anak pertama dari 2 bersaudara, saya lahir di Bandung, tapi sekarang saya bekerja di Jakarta. Pekerjaan saya adalah menata baris demi baris code untuk mencapai tujuan yang saya inginkan. Salah satu kesulitan dalam hidup saya adalah menolak jika ada yang mengajak saya bermain bola :).</p>
    			</div>   			
 
    		</div>   		
@@ -429,18 +429,18 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<img src="images/portfolio/adhimix.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>ADHIMIX</h4>		      
+					      <!-- <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p> -->
 
-					      <div class="categories">Web Development</div>			               
+					      <!-- <div class="categories">Web Development</div> -->
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://www.adhimix.co.id">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -449,18 +449,18 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/portfolio/apik.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>ABADI PRIMA INTIKARYA</h4>		      
+					      <!-- <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p> -->
 
-					      <div class="categories">Web Design</div>			               
+					      <!-- <div class="categories">Web Design</div> -->
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://abadiprimaintikarya.com">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -806,7 +806,7 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright Agung Arisandi S 2019.</span> 
+		        	<span>© Copyright 2019.</span> 
 		        	<!-- <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>	         	 -->
 		         </div>		                  
 	      	</div>
