--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
+						<!-- <li><a class="smoothscroll"  href="#portfolio" title="">Odoo Project</a></li> -->
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
 						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li> -->
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->
@@ -113,7 +113,7 @@
 
    				<img src="https://yt3.ggpht.com/-TJy-Hi4u7wc/AAAAAAAAAAI/AAAAAAAAAAA/Tu-nZ0OXbVE/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Profile Picture">
 
-   				<p class="lead">Nama saya Agung Arisandi, anak pertama dari 2 bersaudara, saya lahir di Bandung, tapi sekarang saya bekerja di Jakarta. Pekerjaan saya adalah menata baris demi baris code untuk mencapai tujuan yang saya inginkan. Salah satu kesulitan dalam hidup saya adalah menolak jika ada yang mengajak saya bermain bola :).</p>
+   				<p class="lead">Nama saya Agung Arisandi, anak pertama dari 2 bersaudara, saya lahir di Bandung. Pekerjaan saya adalah menata baris demi baris code untuk mencapai tujuan yang saya inginkan. Salah satu kesulitan dalam hidup saya adalah menolak jika ada yang mengajak saya bermain bola :).</p>
    			</div>   			
 
    		</div>   		
@@ -133,7 +133,7 @@
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>Juni 7, 1992</span>
+   					<span>7 Juni 1992</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
@@ -145,7 +145,7 @@
    				</li> -->
    				<li>
    					<strong>Email:</strong>
-   					<span>agungarisandi4@gmail.com.com</span>
+   					<span>agungarisandi4@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -159,7 +159,7 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
+				   	<div class="progress percent60"><span>60%</span></div>
 				   	<strong>ODOO</strong>
 				   </li>
 				   <li>
@@ -168,10 +168,14 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent60"><span>60%</span></div>
+				   	<strong>SQL</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent50"><span>50%</span></div>
 				   	<strong>HTML5</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent60"><span>60%</span></div>
+				   	<div class="progress percent50"><span>50%</span></div>
 				   	<strong>CSS</strong>
 				   </li>
 				</ul> <!-- /skill-bars -->		
@@ -224,13 +228,51 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Junior Programmer</h3>
-	   					<p>July 2017 - Present</p>
+	   					<h3>Odoo Programmer</h3>
+	   					<p>Maret 2020 - Sekarang</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>PT. Bina San Prima</h4>
+	   					<p>- Custom modul Inventory dalam pengembangan warehouse management system.</p>
+	   					<p>- Custom modul Purchase dan HR.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Odoo Programmer</h3>
+	   					<p>Juni 2019 - Februari 2020</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>PT. DITAMA TECHNOLOGIES</h4>
+	   					<p>- Custom modul Manufacture untuk PT LEA Sanent.</p>
+	   					<p>- Custom modul Purchase, Inventory, Sales untuk Willys Motor.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Odoo Programmer</h3>
+	   					<p>Juli 2017 - Mei 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>PT. WITACO</h4>
-	   					<p>Membuat addons custom odoo untuk modul project management, karena kebetulan saat ini klien perusahaan tempat saya bekerja bergerak di bidang konstruksi.</p>
+	   					<p>Custom odoo v10 modul Project Management, Purchase, Inventory, Accounting untuk PT Abadi Prima Inti Karya.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -372,24 +414,21 @@
 
 	<!-- Portfolio Section
    ================================================== -->
-	<section id="portfolio">
+	<!-- <section id="portfolio">
 
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Portfolio</h5>
+   			<h5>Odoo Project</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<!-- <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p> -->
-
    		</div>   		
-   	</div> <!-- /section-intro--> 
+   	</div>
 
    	<div class="row portfolio-content">
 
    		<div class="col-twelve">
 
-   			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
 	         	<div class="bgrid folio-item">
@@ -406,7 +445,7 @@
 	                     </div>                    
 	                  </a>
 	               </div>	               
-	        		</div> <!-- /folio-item -->
+	        		</div>
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -422,10 +461,8 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        		</div>
 
-	            <!-- modal popups - begin
-	            ============================================================= -->
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
@@ -434,9 +471,6 @@
 
 					   <div class="description-box">
 					      <h4>ADHIMIX</h4>		      
-					      <!-- <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p> -->
-
-					      <!-- <div class="categories">Web Development</div> -->
 					   </div>
 
 			         <div class="link-box">
@@ -444,7 +478,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-01 -->
+				   </div>
 
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
@@ -454,9 +488,6 @@
 
 					   <div class="description-box">
 					      <h4>ABADI PRIMA INTIKARYA</h4>		      
-					      <!-- <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p> -->
-
-					      <!-- <div class="categories">Web Design</div> -->
 					   </div>
 
 			         <div class="link-box">
@@ -464,7 +495,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-02 -->
+				   </div>
 
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
@@ -484,7 +515,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-03 -->
+				   </div>
 
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
@@ -504,7 +535,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-04 -->
+				   </div>
 
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
@@ -524,7 +555,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-05 -->
+				   </div>
 
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
@@ -544,19 +575,15 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-06 -->
+				   </div>
 
+	         </div>
 
-				   <!-- modal popups - end
-	            ============================================================= -->
+   		</div>
 
-	         </div> <!-- /portfolio-wrapper --> 
-
-   		</div>  <!-- /twelve -->   
-
-   	</div> <!-- /portfolio-content --> 
+   	</div>
 		
-	</section> <!-- /portfolio --> 
+	</section> -->
 
 	
 	<!-- services Section
@@ -749,9 +776,7 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Jalan Pancoran Timur 5 No.3<br>
-            Pancoran, Jakarta Selatan<br>
-            Indonesia
+            Kp. Curug RT 03 RW 12 Desa Ciapus Kec. Banjaran Kab. Bandung
             </p>
 
    		</div>
@@ -806,8 +831,8 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright 2019.</span> 
-		        	<!-- <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>	         	 -->
+		        	<span>© Copyright 2023.</span> 
+		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>	         	
 		         </div>		                  
 	      	</div>
 
