--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<!-- <li><a class="smoothscroll"  href="#portfolio" title="">Odoo Project</a></li> -->
+						<li><a class="smoothscroll"  href="#portfolio" title="">Odoo Project</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
 						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li> -->
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->
@@ -111,7 +111,7 @@
 
    			<div class="intro-info">
 
-   				<img src="https://yt3.ggpht.com/-TJy-Hi4u7wc/AAAAAAAAAAI/AAAAAAAAAAA/Tu-nZ0OXbVE/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Profile Picture">
+   				<img src="images/profile.jpg" alt="Profile Picture">
 
    				<p class="lead">Nama saya Agung Arisandi, anak pertama dari 2 bersaudara, saya lahir di Bandung. Pekerjaan saya adalah menata baris demi baris code untuk mencapai tujuan yang saya inginkan. Salah satu kesulitan dalam hidup saya adalah menolak jika ada yang mengajak saya bermain bola :).</p>
    			</div>   			
@@ -414,7 +414,7 @@
 
 	<!-- Portfolio Section
    ================================================== -->
-	<!-- <section id="portfolio">
+	<section id="portfolio">
 
 		<div class="row section-intro">
    		<div class="col-twelve">
@@ -431,31 +431,15 @@
 
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
-	         	<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/adhimix.jpg" alt="Liberty">
-	                  <a href="#modal-01" class="overlay">	                  	           
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Adhimix Precast Indonesia</h3>	     					    
-		     					    	 <span class="folio-types">
-		     					       	  ODOO PROGRAMMER
-		     					       </span>
-		     					   </div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>	               
-	        		</div>
-
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/apik.png" alt="Shutterbug">
-	               	<a href="#modal-02" class="overlay">              		                  
+	               	<a href="#modal-01" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Abadi Prima Intikarya</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  ODOO PROGRAMMER
+		     					       	  PT. Abadi Prima Inti Karya is a construction company that was established in 2010.
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -463,24 +447,23 @@
 	               </div>
 	        		</div>
 
-	            <div id="modal-01" class="popup-modal slider mfp-hide">	
+	        		<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/bsp.jpg" alt="Liberty">
+	                  <a href="#modal-02" class="overlay">	                  	           
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+		     					       <h3 class="folio-title">Bina San Prima</h3>	     					    
+		     					    	 <span class="folio-types">
+		     					       	  PT BINA SAN PRIMA is national health care, consumer product and raw materials distributor.
+		     					       </span>
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>	               
+	        		</div>
 
-				     	<div class="media">
-				     		<img src="images/portfolio/adhimix.jpg" alt="" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>ADHIMIX</h4>		      
-					   </div>
-
-			         <div class="link-box">
-			            <a href="http://www.adhimix.co.id">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-				   </div>
-
-				   <div id="modal-02" class="popup-modal slider mfp-hide">	
+				   <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/apik.png" alt="" />
@@ -497,7 +480,24 @@
 
 				   </div>
 
-				   <div id="modal-03" class="popup-modal slider mfp-hide">	
+				   <div id="modal-02" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/bsp.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Bina San Prima</h4>		      
+					   </div>
+
+			         <div class="link-box">
+			            <a href="http://www.binasanprima.com/">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div>
+
+				   <!-- <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
@@ -575,7 +575,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div>
+				   </div> -->
 
 	         </div>
 
@@ -583,7 +583,7 @@
 
    	</div>
 		
-	</section> -->
+	</section>
 
 	
 	<!-- services Section
